k8s/observability/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observability
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472

      containers:
        - name: grafana
          image: grafana/grafana:latest
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            failureThreshold: 5
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"

          ports:
            - containerPort: 3000
              protocol: TCP

          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-data

      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
