k8s/observability/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: observability
spec:
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
  selector:
    app: grafana
